# PaperFlow

./: AGENTS.md  BUILD.md  CHANGELOG.md  CLAUDE.md  COMPETITIVE_ANALYSIS.md  CONTRIBUTING.md  CONTRIBUTING_TRANSLATIONS.md  CRUSH.md  README.md  index.html  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
fonts/: Befonts-License.txt
src/: App.css  App.tsx  bindings.ts  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: actions.rs  groq_transcription.rs  lib.rs  llm_client.rs  main.rs  overlay.rs  settings.rs  shortcut.rs  tray.rs  utils.rs
src-tauri/src/audio_toolkit/: mod.rs  text.rs
src-tauri/src/audio_toolkit/audio/: recorder.rs
src-tauri/src/commands/: audio.rs  diarization.rs  export.rs  file_transcription.rs  meeting.rs  mod.rs  models.rs  watch_folder.rs
src-tauri/src/context/: active_app.rs  mod.rs  window_context.rs
src-tauri/src/managers/: audio.rs  diarization.rs  file_transcription.rs  history.rs  live_preview.rs  meeting.rs  mod.rs  model.rs  snippets.rs  system_audio.rs  transcription.rs  watch_folder.rs
src-tauri/swift/: apple_intelligence.swift
src/components/: Sidebar.tsx
src/components/command-palette/: CommandPalette.tsx  CommandPaletteContext.tsx  index.ts
src/components/home/: HomePage.tsx
src/components/icons/: HandyTextLogo.tsx  PaperFlowHand.tsx  PaperFlowTextLogo.tsx
src/components/model-selector/: ModelDropdown.tsx  ModelSelector.tsx  ModelStatusButton.tsx
src/components/onboarding/: AccessibilityOnboarding.tsx  Onboarding.tsx  index.ts
src/components/settings/: ContextAwarenessToggle.tsx  CorrectionsToggle.tsx  CustomWords.tsx  DeveloperModeToggle.tsx  DiarizationSettings.tsx  FormattingToggle.tsx  GroqApiKeyInput.tsx  LanguageSelector.tsx  LivePreviewSetting.tsx  PaperFlowShortcut.tsx  ShowMeetingMenuToggle.tsx  ShowSidebarToggle.tsx  SnippetsToggle.tsx  SystemAudioInfo.tsx  ToneToggle.tsx  WhisperMode.tsx  index.ts
src/components/settings/about/: AboutSettings.tsx
src/components/settings/advanced/: AdvancedSettings.tsx
src/components/settings/debug/: DebugPaths.tsx  DebugSettings.tsx
src/components/settings/developer/: DeveloperSettings.tsx
src/components/settings/files/: ExportDropdown.tsx  FileTranscriptionSettings.tsx  WatchFolderSettings.tsx  index.ts
src/components/settings/formatting/: FormattingSettings.tsx
src/components/settings/general/: GeneralSettings.tsx
src/components/settings/history/: HistorySettings.tsx
src/components/settings/language/: MultiLanguageSelector.tsx  index.ts
src/components/settings/meeting/: MeetingHistory.tsx  MeetingSettings.tsx  index.ts
src/components/settings/snippets/: SnippetsSettings.tsx
src/components/settings/tone/: ToneSettings.tsx
src/components/ui/: CollapsibleSection.tsx  Dropdown.tsx
src/components/update-checker/: UpdateChecker.tsx
src/i18n/: languages.ts
src/i18n/locales/cs/: translation.json
src/i18n/locales/de/: translation.json
src/i18n/locales/en/: translation.json
src/i18n/locales/es/: translation.json
src/i18n/locales/fr/: translation.json
src/i18n/locales/it/: translation.json
src/i18n/locales/ja/: translation.json
src/i18n/locales/pl/: translation.json
src/i18n/locales/pt/: translation.json
src/i18n/locales/ru/: translation.json
src/i18n/locales/tr/: translation.json
src/i18n/locales/uk/: translation.json
src/i18n/locales/vi/: translation.json
src/i18n/locales/zh/: translation.json
src/overlay/: RecordingOverlay.css  RecordingOverlay.tsx
src/stores/: modelStore.ts  settingsStore.ts
